--- a/web.html
+++ b/web.html
@@ -18,6 +18,7 @@
 
 
   <div class="grid">
+  <div class="image" ><img  src="Web\Cindy.jpg" alt=""></div>
   <div class="image" ><img  src="Web\ABC.jpg" alt=""></div>
   <div class="image"><img src="Web\Midas 1.jpg" alt=""></div>
   <div class="image"><img src="Web\Midas 2.jpg" alt=""></div>
