--- a/web.html
+++ b/web.html
@@ -18,12 +18,13 @@
 
 
   <div class="grid">
-  <div class="image" ><img  src="Web\Cindy.jpg" alt=""></div>
+  <a href="https://porsche-911-girl.herokuapp.com/"><div class="image"><img  src="Web\Cindy.jpg" alt=""></div></a>
   <div class="image" ><img  src="Web\ABC.jpg" alt=""></div>
   <div class="image"><img src="Web\Midas 1.jpg" alt=""></div>
   <div class="image"><img src="Web\Midas 2.jpg" alt=""></div>
   <div class="image"><img src="Web\Midas 3.jpg" alt=""></div>
-  <div class="image"><img src="Web\Poppins Productions.jpg" alt=""></div>
+  <a href="https://poppinsproductions.herokuapp.com/"><div class="image"><img src="Web\Poppins Productions.jpg" alt=""></div></a>
+  <a href="https://chris-present.herokuapp.com/"><div class="image"><img src="Web\Chris Present.jpg" alt=""></div></a>
 </div>
 
 <div id="myModal" class="modal">
